--- a/ExtLibs/Strings/Strings.resx
+++ b/ExtLibs/Strings/Strings.resx
@@ -551,7 +551,7 @@ Please use Standard/Advanced Params for the safe settings</value>
   </data>
   <data name="PleaseUnplugTheBoardAnd" xml:space="preserve">
     <value>Please unplug the board, and then press OK and plug back in.
-Mission Planner will look for 30 seconds to find the board</value>
+Mission Planner will look for 2 minutes to find the board</value>
   </data>
   <data name="ThisBoardHasBeenRetired" xml:space="preserve">
     <value>This board has been retired, Mission Planner this will upload the last available version to your board (AC 3.2.1/AP 3.4.0)</value>
